--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Deploy infra
+name: Deploy 
 
 on:
   workflow_dispatch:
@@ -26,7 +26,7 @@ jobs:
 
       - name: Copy files to server
         run: |
-          scp Dockerfile SSH_DEST:$APP_DIR/
+          scp Dockerfile $SSH_DEST:$APP_DIR/
 
       - name: Deploy application
         run: |
